virtual threads, test file, display update